--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 .main {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   height: 100%;
   width: 100%;
@@ -46,6 +47,19 @@ body {
   background-color: gray;
   justify-content: center;
   align-items: center;
+}
+
+.btn-restart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+  height: 2rem;
+  width: 5rem;
+  font-size: 1rem;
+  border-radius: 0.2rem;
+  border: 1px solid;
+  background-color: gray;
 }
 
 .footer {
